--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,31 @@
 /DateTime-Calendar-Japanese-Era-*
-/.build
+/.build/
 /_build_params
+/_build/
 /Build
 /Build.bat
 !Build/
 !META.json
 !LICENSE
-blib
+/blib
+/pm_to_blib
+/Makefile
 out
+
+/carton.lock
+/.carton/
+/local/
+
+nytprof.out
+nytprof/
+
+cover_db/
+
+*.bak
+*.old
+*~
+*.swp
+*.o
+*.obj
+
+MYMETA.*
